# rhodius

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README  README.md  rhodius.def.lua
api/: CMakeLists.txt
api/include/rhodius/api/: def.h  errors.h  lua.h  plugins.h
api/src/: headers.c
cmake/: TargetSystem.cmake
example/: build.rhodius.lua
include/rhodius/: _io.h  _platform.h  _plugins.h  _util.h  log.h  mainplugin.h  options.h  platform.h  plugins.h  project.h
include/rhodius/ext/: lua.h
include/rhodius/generators/: generators.h  makefile.h  template.h
include/rhodius/scripting/: _script.h  script.h
include/rhodius/util/: linkedlist.h
librhodius/include/rhodius/api/: errors.h  lua.h  plugins.h
librhodius/src/: headers.c
plugins/main/: CMakeLists.txt
plugins/main/include/rhodius-mainplugin/: main.h
plugins/main/include/rhodius-mainplugin/generators/: template.h
plugins/main/src/: main.c
plugins/main/src/generators/: template.c
src/: io_linux.c  log.c  main.c  mainplugin.c  options.c  plugins.c  util.c
src/api/: plugins.c
src/ext/: lua.c
src/generators/: template.c
src/linux/: platform.c  terminals.platform.c
src/scripting/: api.c  script.c
src/util/: linkedlist.c
